<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- GENERAL -->
    <string name="app_name">ET Public Demo</string>
    <string name="menu_discount">Current Discount</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_debug_settings">Debug Settings</string>
    <string name="menu_about">About</string>
    <string name="silent">Silent</string>
    <string name="placeholder_long">Placeholder to test until text loaded.</string>
    <string name="blank"></string>

    <!-- SETTINGS -->
    <string name="settings">Settings</string>
    <string name="pref_personal_info_title">Personal Information</string>
    <string name="pref_notify_category_title">Notifications</string>

    <string name="pref_first_name">First Name</string>
    <string name="pref_first_name_summ">Please enter your first name</string>

    <string name="pref_last_name">Last Name</string>
    <string name="pref_last_name_summ">Please enter your last name</string>

    <string name="pref_push">Push Notifications</string>
    <string name="pref_push_summ">Receive alerts for your favorite teams</string>

    <string name="pref_geo">Location Notifications</string>
    <string name="pref_geo_summ">Receive alerts when you are located near your favorite teams</string>

    <string name="pref_use_custom_ringtone">Use Custom Alert Sound</string>
    <string name="pref_use_custom_ringtone_summ_off">Whistle alert sound will be used</string>
    <string name="pref_use_custom_ringtone_summ_on">Custom alert sound will be used</string>

    <string name="pref_custom_ringtone">Custom Alert Sound</string>
    <string name="pref_custom_ringtone_summ">Choose a custom sound to play for alerts.</string>
    
    <string name="pref_vibrate">Vibrate</string>
    <string name="pref_vibrate_summ_off">No vibration when alerts arrive.</string>
    <string name="pref_vibrate_summ_on">Vibrate when alerts arrive.</string>

    <!-- DEBUG SETTINGS -->
    <string name="debug_pref_settings_title">Debug Settings</string>

    <string name="debug_pref_enable_debug">Enable Debug</string>
    <string name="debug_pref_enable_debug_summ_off">Debug logging is off.</string>
    <string name="debug_pref_enable_debug_summ_on">Debug logging is on.</string>

    <string name="debug_pref_collect_logcat">Collect Logcat</string>
    <string name="debug_pref_collect_logcat_summ">Click to collect debug statements from the device logcat.</string>

    <!-- Activities -->
    <string name="public_demo_home_activity_title">ET Public Demo Home</string>
    <string name="public_demo_notification_activity_title">ET Public Demo Notifications</string>
    <string name="public_demo_discount_activity_title">ET Public Demo Current Discount</string>
    <string name="public_demo_about_activity_title">ET Public Demo About</string>
    <string name="public_demo_settings_activity_title">ET Public Demo Settings</string>

    <!-- Errors -->
    <string name="error_cannot_be_blank">This field cannot be blank</string>

</resources>