<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

     <item
            android:id="@+id/menu_notification"
            android:icon="@android:drawable/ic_menu_preferences"
            android:orderInCategory="100"
            android:showAsAction="never"
            android:title="@string/menu_notification"/>

    <item
            android:id="@+id/menu_settings"
            android:icon="@android:drawable/ic_menu_preferences"
            android:orderInCategory="101"
            android:showAsAction="never"
            android:title="@string/menu_settings"/>

    <item
            android:id="@+id/menu_debug_settings"
            android:icon="@android:drawable/ic_menu_preferences"
            android:orderInCategory="102"
            android:showAsAction="never"
            android:title="@string/menu_debug_settings"/>

    <item
            android:id="@+id/menu_about"
            android:icon="@android:drawable/ic_menu_help"
            android:orderInCategory="103"
            android:showAsAction="never"
            android:title="@string/menu_about"/>

</menu>